--- a/router-config/lede-master/.config
+++ b/router-config/lede-master/.config
@@ -362,13 +362,13 @@ CONFIG_PACKAGE_kmod-mii=y
 # CONFIG_PACKAGE_kmod-vmxnet3 is not set
 
 # WirelessAPD:
-CONFIG_PACKAGE_hostapd-common=y
-CONFIG_PACKAGE_wpa-cli=y
-CONFIG_WPA_MSG_MIN_PRIORITY=3
-CONFIG_DRIVER_WEXT_SUPPORT=y
-CONFIG_DRIVER_11N_SUPPORT=y
-CONFIG_DRIVER_11AC_SUPPORT=y
-CONFIG_PACKAGE_wpad=y
+# CONFIG_PACKAGE_hostapd-common is not set
+# CONFIG_PACKAGE_wpa-cli is not set
+# CONFIG_WPA_MSG_MIN_PRIORITY is not set
+# CONFIG_DRIVER_WEXT_SUPPORT is not set
+# CONFIG_DRIVER_11N_SUPPORT is not set
+# CONFIG_DRIVER_11AC_SUPPORT is not set
+# CONFIG_PACKAGE_wpad is not set
 
 # Protocols:
 CONFIG_PACKAGE_luci-proto-3g=y
@@ -388,7 +388,7 @@ CONFIG_BRCMFMAC_SDIO=y
 CONFIG_LUCI_LANG_en=y
 
 # LuCI-app:
-# CONFIG_PACKAGE_luci-app-openclash is not set
+CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-accesscontrol=y
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 # CONFIG_PACKAGE_luci-app-arpbind is not set
