--- a/router-config/openwrt-21.02/.config
+++ b/router-config/openwrt-21.02/.config
@@ -871,7 +871,12 @@ CONFIG_PACKAGE_luci-proto-relay=y
 CONFIG_BRCMFMAC_SDIO=y
 CONFIG_BRCMFMAC_USB=y
 
+# Kernel
+CONFIG_KERNEL_BUILD_USER="Oplosan"
+CONFIG_KERNEL_BUILD_DOMAIN="Oplosan.com"
+
 # LuCI-app:
+CONFIG_PACKAGE_luci-app-tinyfm=y
 CONFIG_PACKAGE_luci-app-openclash=y
 # CONFIG_PACKAGE_luci-app-acl is not set
 # CONFIG_PACKAGE_luci-app-acme is not set
