--- a/router-config/lede-master/.config
+++ b/router-config/lede-master/.config
@@ -59,15 +59,15 @@ CONFIG_PACKAGE_luci-i18n-base-en=y
 # CONFIG_PACKAGE_luci-i18n-base-tr is not set
 # CONFIG_PACKAGE_luci-i18n-base-uk is not set
 # CONFIG_PACKAGE_luci-i18n-base-vi is not set
-CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-base-zh-cn is not set
 # CONFIG_PACKAGE_luci-i18n-base-zh-tw is not set
 
 # Firmware:
 CONFIG_PACKAGE_brcmfmac-firmware-4329-sdio=y
 CONFIG_PACKAGE_brcmfmac-firmware-43362-sdio=y
 CONFIG_PACKAGE_brcmfmac-firmware-43430-sdio=y
-CONFIG_PACKAGE_brcmfmac-firmware-43430-sdio-rpi-3b=y
-CONFIG_PACKAGE_brcmfmac-firmware-43430-sdio-rpi-zero-w=y
+CONFIG_PACKAGE_brcmfmac-firmware-43430-sdio-rpi-3b is not set
+CONFIG_PACKAGE_brcmfmac-firmware-43430-sdio-rpi-zero-w is not set
 CONFIG_PACKAGE_brcmfmac-firmware-43430a0-sdio=y
 CONFIG_PACKAGE_brcmfmac-firmware-43455-sdio=y
 CONFIG_PACKAGE_brcmfmac-firmware-43455-sdio-rpi-3b-plus=y
@@ -372,16 +372,16 @@ CONFIG_PACKAGE_kmod-mii=y
 # CONFIG_PACKAGE_kmod-vmxnet3 is not set
 
 # WirelessAPD:
-# CONFIG_PACKAGE_hostapd-common is not se
-# CONFIG_PACKAGE_wpa-cli is not se
-# CONFIG_WPA_MSG_MIN_PRIORITY is not se
-# CONFIG_DRIVER_WEXT_SUPPORT is not se
-# CONFIG_DRIVER_11N_SUPPORT is not se
-# CONFIG_DRIVER_11AC_SUPPORT is not se
-# CONFIG_PACKAGE_wpad is not se
+# CONFIG_PACKAGE_hostapd-common is not set
+# CONFIG_PACKAGE_wpa-cli is not set
+# CONFIG_WPA_MSG_MIN_PRIORITY is not set
+# CONFIG_DRIVER_WEXT_SUPPORT is not set
+# CONFIG_DRIVER_11N_SUPPORT is not set
+# CONFIG_DRIVER_11AC_SUPPORT is not set
+# CONFIG_PACKAGE_wpad is not is not set
 
 # Protocols:
-CONFIG_PACKAGE_luci-proto-3g=y
+# CONFIG_PACKAGE_luci-proto-3g is not set
 CONFIG_PACKAGE_luci-proto-bonding=y
 CONFIG_PACKAGE_luci-proto-ipip=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
@@ -401,7 +401,7 @@ CONFIG_LUCI_LANG_en=y
 CONFIG_PACKAGE_luci-app-accesscontrol=y
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 # CONFIG_PACKAGE_luci-app-arpbind is not set
-CONFIG_PACKAGE_luci-app-autoreboot=y
+# CONFIG_PACKAGE_luci-app-autoreboot is not set
 CONFIG_PACKAGE_luci-app-amlogic=y
 CONFIG_PACKAGE_luci-app-cifs-mount=y
 CONFIG_PACKAGE_luci-app-ddns=y
@@ -640,7 +640,7 @@ CONFIG_SAMBA4_SERVER_AVAHI=y
 CONFIG_SAMBA4_SERVER_VFS=y
 # CONFIG_SAMBA4_SERVER_VFSX is not set
 # CONFIG_SAMBA4_SERVER_AD_DC is not set
-CONFIG_PACKAGE_samba4-utils=y
+# CONFIG_PACKAGE_samba4-utils is not set
 CONFIG_PACKAGE_tree=y
 CONFIG_PACKAGE_tune2fs=y
 CONFIG_PACKAGE_tar=y
