--- a/router-config/lede-master/.config
+++ b/router-config/lede-master/.config
@@ -66,8 +66,8 @@ CONFIG_PACKAGE_luci-i18n-base-en=y
 CONFIG_PACKAGE_brcmfmac-firmware-4329-sdio=y
 CONFIG_PACKAGE_brcmfmac-firmware-43362-sdio=y
 CONFIG_PACKAGE_brcmfmac-firmware-43430-sdio=y
-CONFIG_PACKAGE_brcmfmac-firmware-43430-sdio-rpi-3b is not set
-CONFIG_PACKAGE_brcmfmac-firmware-43430-sdio-rpi-zero-w is not set
+# CONFIG_PACKAGE_brcmfmac-firmware-43430-sdio-rpi-3b is not set
+# CONFIG_PACKAGE_brcmfmac-firmware-43430-sdio-rpi-zero-w is not set
 CONFIG_PACKAGE_brcmfmac-firmware-43430a0-sdio=y
 CONFIG_PACKAGE_brcmfmac-firmware-43455-sdio=y
 CONFIG_PACKAGE_brcmfmac-firmware-43455-sdio-rpi-3b-plus=y
