--- a/router-config/lede-master/.config
+++ b/router-config/lede-master/.config
@@ -144,7 +144,7 @@ CONFIG_BRCMFMAC_USB=y
 CONFIG_PACKAGE_kmod-mt76-usb=y
 # CONFIG_PACKAGE_kmod-mt7601u is not set
 # CONFIG_PACKAGE_kmod-mt7603 is not set
-CONFIG_PACKAGE_kmod-mt7615-common is not set
+# CONFIG_PACKAGE_kmod-mt7615-common is not set
 # CONFIG_PACKAGE_kmod-mt7615-firmware is not set
 # CONFIG_PACKAGE_kmod-mt7615e is not set
 # CONFIG_PACKAGE_kmod-mt7663-firmware-ap is not set
